objects/Jiffle_Attendee_Invitee__c.object
<CustomObject>
    <fields>
        <fullName>Account_Name__c</fullName>
        <formula>Customer_Engagements_Events__r.Account_Name_English__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <formula>HYPERLINK("/"+Customer_Engagements_Events__r.Primary_Account__c, Customer_Engagements_Events__r.Primary_Account__r.Name,"_parent")</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Additional_Info__c</fullName>
        <label>Additional Info</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Attendee_Email__c</fullName>
        <label>Attendee Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Attendee_First_Name__c</fullName>
        <label>Attendee First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attendee_Full_Name__c</fullName>
        <formula>HYPERLINK('/'+Id , Attendee_First_Name__c +" "+Attendee_Last_Name__c,"_self")</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Attendee Full Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attendee_Last_Name__c</fullName>
        <label>Attendee Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attendee_Status__c</fullName>
        <label>Attendee Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Company__c</fullName>
        <label>Company</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Sync__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Contact Sync</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact_Type__c</fullName>
        <label>Contact Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>CEE_Jiffle_Invites</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Opportunity_Amount__c</fullName>
        <formula>IF( FirstAttendeeFlag__c ,(Customer_Engagements_Events__r.Opportunity__r.Amount)/ Customer_Engagements_Events__r.Count_of_Meetings__c ,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Opportunity Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Current_Opportunity_Forecast_Status__c</fullName>
        <formula>IF( FirstAttendeeFlag__c ,Text(Customer_Engagements_Events__r.Opportunity__r.Forecast_Status__c ),
"")</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Opportunity Forecast Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Opportunity_Status__c</fullName>
        <formula>IF( FirstAttendeeFlag__c ,Text(Customer_Engagements_Events__r.Opportunity__r.Opportunity_Status__c),"")</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Opportunity Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Engagements_Events__c</fullName>
        <label>Customer Engagements &amp; Events</label>
        <referenceTo>CEE__c</referenceTo>
        <relationshipName>Jiffle_Attendees_Invitees</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>End_Date_Time__c</fullName>
        <formula>Jiffle_Session_Meeting__r.End_Date_Time__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>End Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Event__c</fullName>
        <formula>Jiffle_Session_Meeting__r.Jiffle_Agenda_Item__r.Jiffle_Event__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Event</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FirstAttendeeFlag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>FirstAttendeeFlag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Meeting_Host__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Meeting Host?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Meeting_Requestor__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Meeting Requestor?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_NDA_On_File__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is NDA On File?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Jiffle_Event_End_Date__c</fullName>
        <formula>Customer_Engagements_Events__r.Jiffle_Event__r.Event_End_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Jiffle Event End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Jiffle_Event_Start_Date__c</fullName>
        <formula>Customer_Engagements_Events__r.Jiffle_Event__r.Event_Start_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Jiffle Event Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Jiffle_Meeting_Location__c</fullName>
        <formula>Jiffle_Session_Meeting__r.Jiffle_Meeting_Location__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Jiffle Meeting Location</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Jiffle_Session_Meeting__c</fullName>
        <label>Salesforce Meeting ID</label>
        <referenceTo>Jiffle_Meeting_Session__c</referenceTo>
        <relationshipName>CEE_Jiffle_Invites</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Jifflenow_Session_Id__c</fullName>
        <formula>Jiffle_Session_Meeting__r.Jifflenow_Session_Id__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Jifflenow Session Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job_Level__c</fullName>
        <formula>Text(Contact__r.JobLevel__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Job Level</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LoggedInUser__c</fullName>
        <formula>$User.Email = Requestor_Email__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LoggedInUser</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Meeting_Attended__c</fullName>
        <label>Meeting Attended</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Don't Know</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Meeting_Host_Email__c</fullName>
        <label>Meeting Host Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Meeting_Host__c</fullName>
        <description>This field is to store Meeting host</description>
        <label>Meeting Host</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Meeting_Objective__c</fullName>
        <label>Meeting Objective</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Meeting_Type__c</fullName>
        <formula>Jiffle_Session_Meeting__r.Meeting_Type__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Meeting Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mobile__c</fullName>
        <label>Mobile</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_Att_PowerOne__c</fullName>
        <formula>Jiffle_Session_Meeting__r.Number_of_Session_PowerOne__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Number of Att(PowerOne)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <formula>IF(Customer_Engagements_Events__r.Opportunity__c="","No Related Opportunity",HYPERLINK("/"&amp;Customer_Engagements_Events__r.Opportunity__c, Customer_Engagements_Events__r.Opportunity__r.Name, "_parent"))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Portfolio__c</fullName>
        <formula>Customer_Engagements_Events__r.Jiffle_Event__r.Portfolio__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Portfolio</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Jiffle_Attendees_Invitees</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reconciled__c</fullName>
        <defaultValue>"No"</defaultValue>
        <externalId>true</externalId>
        <label>Reconciled</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <formula>Text(Customer_Engagements_Events__r.Region__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reporting_Meeting_Status__c</fullName>
        <label>Reporting Meeting Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requestor_Email__c</fullName>
        <label>Requestor Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Requestor__c</fullName>
        <label>Requestor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFDC_Source__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SFDC Source?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Start_Date_Time__c</fullName>
        <formula>Jiffle_Session_Meeting__r.Start_Date_Time__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Start_Date_Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UniqueCombinationSession__c</fullName>
        <externalId>true</externalId>
        <label>UniqueCombinationSession</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UniqueCombination__c</fullName>
        <externalId>true</externalId>
        <label>UniqueCombination</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>JiffleNow Attendee</label>
    <nameField>
        <displayFormat>JF-{0000000}</displayFormat>
        <label>JiffleNow Invite Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>JiffleNow Attendees</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Reconcile_My_Attendees_Invitees</fullName>
        <booleanFilter>1 AND 2 AND 3 AND 4 AND 5 AND 6 AND 7</booleanFilter>
        <columns>Attendee_Full_Name__c</columns>
        <columns>Company__c</columns>
        <columns>Title__c</columns>
        <columns>Event__c</columns>
        <columns>Jiffle_Session_Meeting__c</columns>
        <columns>Requestor__c</columns>
        <columns>Meeting_Host__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LoggedInUser__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Meeting_Attended__c</field>
            <operation>notEqual</operation>
            <value>Yes,No,Don't Know</value>
        </filters>
        <filters>
            <field>Attendee_Email__c</field>
            <operation>notContain</operation>
            <value>@cisco.com</value>
        </filters>
        <filters>
            <field>Jiffle_Event_End_Date__c</field>
            <operation>equals</operation>
            <value>LAST_N_DAYS:15</value>
        </filters>
        <filters>
            <field>Attendee_Status__c</field>
            <operation>notEqual</operation>
            <value>Deleted,Declined</value>
        </filters>
        <filters>
            <field>Reconciled__c</field>
            <operation>equals</operation>
            <value>No</value>
        </filters>
        <filters>
            <field>SFDC_Source__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Reconcile My Attendees/Invitees</label>
        <language>en_US</language>
    </listViews>
    <validationRules>
        <fullName>JiffleNow_Attendee_Reconciliation_Closed</fullName>
        <active>true</active>
        <errorConditionFormula>AND(NOT(ISNEW()),  $User.ProfileId  &lt;&gt;  $Setup.ProfileID__c.Cisco_ADMIN__c, 
Today() &gt; Customer_Engagements_Events__r.Jiffle_Event__r.Event_End_Date__c+15)</errorConditionFormula>
        <errorMessage>Attendees can’t be confirmed as Attendees Confirmation for 
this event has closed</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>JiffleNow_Attendee_Status_Cant_be_Update</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
NOT(ISNEW()),
ISCHANGED(Meeting_Attended__c),
PRIORVALUE(Meeting_Attended__c)!= ''
)</errorConditionFormula>
        <errorMessage>Attendee confirmation has already been completed.</errorMessage>
    </validationRules>
</CustomObject>